# fogdevice-emulator-driver

./: .gitignore  .gitmodules  CMakeLists.txt
include/: driver.h  mqtt.h
include/spp/: spp.h  spp_cfg.h  spp_cmdid.h  spp_pc_linux.h  spp_proc.h
src/: driver.c  main.c  mqtt.c  paho.cmake
src/spp/: spp.c  spp_proc.c
